@@ -88,7 +88,9 @@ typedef struct filter_external_cups_s { /* Parameters for the
 					   function */
   const char *filter;        /* Path/Name of the CUPS filter to be called by
 				this filter function, required */
-  int is_backend;            /* 1 if we call a CUPS backend */
+  int is_backend;            /* 0 if we call a filter, 1 if we call a CUPS
+				backend, 2 if we call a CUPS backend in
+			        device discovery mode */
   int num_options;           /* Extra options for the 5th command line */
   cups_option_t *options;    /* argument, options of filter_data have
                                 priority, 0/NULL if none */
